# DnD

./: .gitignore  README.md  servers.txt
gtk-client/: CMakeLists.txt  main.c  query-editor.c  query-editor.h  results-view.c  results-view.h
net/: CMakeLists.txt  main.c
rdbms/: Makefile  create_files.c  main.c
rdbms/compiler/: parser.c  parser.h  semantic.c  semantic.h  tokenizer.c  tokenizer.h
rdbms/data/: customer  purchase  review.metadata
rdbms/data/big/data0/: customer0  purchase0
rdbms/data/big/data1/: customer1  purchase1
rdbms/data/big/data2/: customer2  purchase2
rdbms/data/big/data3/: customer3  purchase3
rdbms/data/data0/: customer0  customer0.metadata  purchase0  purchase0.metadata  review0
rdbms/data/data1/: customer1  purchase1  review1
rdbms/data/data2/: purchase2  review2
rdbms/data/data3/: customer3  purchase3  review3
rdbms/data/medium/data0/: customer0  purchase0  review0
rdbms/data/medium/data1/: customer1  purchase1  review1
rdbms/data/medium/data2/: customer2  purchase2  review2
rdbms/data/medium/data3/: customer3  purchase3  review3
rdbms/data/small/data0/: customer0.temp  purchase0.temp  review0.temp
rdbms/data/small/data2/: customer2
rdbms/db_files/: db_file.c  db_file.h  heapfile.c  heapfile.h  result_file.c  result_file.h
rdbms/disk/: block.c  block.h
rdbms/joins/: bnl.c  bnl.h  hash_join.c  hash_join.h
rdbms/memory/: buffer_manager.c  buffer_manager.h  priority_queue.c  priority_queue.h
rdbms/table/: databox.c  databox.h  record.c  record.h  result_set.c  result_set.h  table.c  table.h
utils/: networking_utils.c  networking_utils.h
